Creted delete job function
